@@ -53,10 +53,19 @@ SoccerRuleAspect::SoccerRuleAspect() :
     mFirstCollidingAgent(true),
     mNotOffside(false),
     mLastModeWasPlayOn(false),
-    mUseOffside(true)
+    mUseOffside(true),
+    mDropBallTime(15),
+    mNotStandingMaxTime(1000),       // max time player may be sitted or laying down before being repositioned
+    mGoalieNotStandingMaxTime(1000), // max time goalie may be sitted or laying down before being repositioned
+    mGroundMaxTime(1000),            // max time player may be on the ground before being repositioned
+    mGoalieGroundMaxTime(1000),      // max time goalie (pl number 1) may be on the ground before being repositioned
+    mMaxPlayersInsideOwnArea(1000),  // maximum number of players of the defending team that may be inside own penalty area
+    mMinOppDistance(0),          // min dist for closest Opponent to ball in order to use repositions for 2nd, 3rd player
+    mMin2PlDistance(0),            // min dist for second closest of team before being repositioned
+    mMin3PlDistance(0),            // min dist for third closest of team before being repositioned 
+    mMaxFaultTime(0.0)               // maximum time allowed for a player to commit a positional fault before being repositioned
 {
     mFreeKickPos = Vector3f(0.0,0.0,mBallRadius);
-
 }
 
 SoccerRuleAspect::~SoccerRuleAspect()
@@ -70,6 +79,271 @@ SoccerRuleAspect::MoveBall(const Vector3f& pos)
     mBallBody->SetVelocity(Vector3f(0,0,0));
     mBallBody->SetAngularVelocity(Vector3f(0,0,0));
     mBallBody->Enable();
+}
+
+/* Uses only Ball and Players positions and detects overcrowind near ball and areas and 
+players innappropriate behavior (laying on the ground or not walking for too much time) */
+void 
+SoccerRuleAspect::AutomaticSimpleReferee(TPlayMode playMode)
+{
+    if (playMode != PM_PlayOn) { 
+	ResetFaultCounter(TI_LEFT); ResetFaultCounter(TI_RIGHT);  //only using automatic refereing in PlayOn
+    } 
+    else {
+       	CalculateDistanceArrays(TI_LEFT);    	// Calculates distance arrays for left team 
+    	CalculateDistanceArrays(TI_RIGHT);   	// Calculates distance arrays for right team 
+    	AnalyseFaults(TI_LEFT);   		// Analyses simple faults for the left team 
+    	AnalyseFaults(TI_RIGHT);   		// Analyses simple faults for the right team 
+    	ClearPlayersAutomatic(TI_LEFT);   	// enforce standing and not overcrowding rules for left team
+    	ClearPlayersAutomatic(TI_RIGHT);  	// enforce standing and not overcrowding rules for right team
+    }
+}
+
+
+void 
+SoccerRuleAspect::ResetFaultCounterPlayer(int unum, TTeamIndex idx)
+{
+    playerGround[unum][idx] = 0; 
+    playerNotStanding[unum][idx] = 0; 
+    playerStanding[unum][idx] = 5/0.02;   // Considers player has been standing for some time in playoff
+    prevPlayerInsideOwnArea[unum][idx] = 0; 
+    playerInsideOwnArea[unum][idx] = 0; 
+    playerFaultTime[unum][idx] = 0; 
+}
+
+void 
+SoccerRuleAspect::ResetFaultCounter(TTeamIndex idx)
+{
+    for(int t=1; t<=11; t++) {
+	ResetFaultCounterPlayer(t,idx);
+    }
+}
+
+// Process agent state: standing, sitted, laying down, ...
+void 
+SoccerRuleAspect::processAgentState(salt::Vector3f pos, int unum, TTeamIndex idx)
+{
+	float groundZVal = 0.15;  //bellow this player is on the ground
+	float middleZVal = 0.25;  //abovce this player is standing (or trying...)
+
+        //increase player not standing if it is not in upward position and inside of field 
+        if (pos.z() < middleZVal && fabs(pos.y())< mFieldWidth/2 + 0.1) { 
+		playerNotStanding[unum][idx]++;     	
+   		playerStanding[unum][idx]=0;  	//player not standing
+	}
+
+        //increase player near ground if it is very low and inside of field
+        if (pos.z() < groundZVal && fabs(pos.y())< mFieldWidth/2 + 0.1) {   
+		playerGround[unum][idx]++;  	   
+	}     
+
+        //increase player standing or at least trying... Reset ground
+	if (pos.z() >= middleZVal) { 			
+		playerStanding[unum][idx]++; 
+		playerGround[unum][idx]=0;   
+	}
+
+        //Player standing for some cycles (0.5 seconds) reset not standing count
+        if (playerStanding[unum][idx] > 0.5/0.02) { 	
+		playerNotStanding[unum][idx]=0;	
+	}
+
+//  	if (playerGround[unum][idx] > 0/0.02)    
+//		cout << "On the Ground Unum" << unum << "  Team: " << idx << " Time: " << playerGround[unum][idx] << 
+//			"  z= " << pos.z() << endl;  //debug
+}
+
+// Calculates ordering on a distance vector
+void SoccerRuleAspect::SimpleOrder(float dArr[][3], int oArr[][3], TTeamIndex idx)
+{
+    for(int t1=1; t1<=10; t1++)  
+    	for(int t2=t1+1; t2<=11; t2++) 
+		if (dArr[t1][idx] >= dArr[t2][idx]) oArr[t1][idx]++; else oArr[t2][idx]++;
+    
+//    DEBUG
+//    if (dArr[1][idx]<1000.0) {
+//      cout << "Team: " << idx << "  --> ";
+//      for(int t1=1; t1<=6; t1++) 
+//	if (dArr[t1][idx]<5.0) cout << t1 << " o:" << oArr[t1][idx] << " d: " << dArr[t1][idx] << "  | ";
+//      cout << endl; 
+//    }
+}
+
+// Calculate Distance arrays and ordering to the ball and own goal
+void SoccerRuleAspect::CalculateDistanceArrays(TTeamIndex idx)
+{
+    if (idx == TI_NONE || mBallState.get() == 0) return;
+    std::list<boost::shared_ptr<AgentState> > agent_states;
+    if (! SoccerBase::GetAgentStates(*mBallState.get(), agent_states, idx))  return;
+
+    salt::Vector3f ballPos = mBallBody->GetPosition();
+    salt::Vector3f ownGoalPos = Vector3f(-mFieldLength/2.0, 0.0, 0.0);
+    if (idx==TI_RIGHT) ownGoalPos = Vector3f(mFieldLength/2.0, 0.0, 0.0); //own goal position
+    boost::shared_ptr<oxygen::Transform> agent_aspect;
+    std::list<boost::shared_ptr<AgentState> >::const_iterator i;
+
+    numPlInsideOwnArea[idx] = 0; closestPlayer[idx]=1; closestPlayerDist[idx]=1000.0;
+    for(int t=1; t<=11; t++) { 
+	distArr[t][idx]=1000.0; ordArr[t][idx]=1; distGArr[t][idx]=1000.0; ordGArr[t][idx]=1; 
+    }
+
+    for (i = agent_states.begin(); i != agent_states.end(); ++i) {
+        SoccerBase::GetTransformParent(**i, agent_aspect);
+        Vector3f agentPos = agent_aspect->GetWorldTransform().Pos();
+        int unum = (*i)->GetUniformNumber(); 
+ 	distArr[unum][idx] = sqrt((agentPos.x()-ballPos.x())*(agentPos.x()-ballPos.x()) + 
+			  (agentPos.y()-ballPos.y())*(agentPos.y()-ballPos.y()));
+ 	distGArr[unum][idx] = sqrt((agentPos.x()-ownGoalPos.x())*(agentPos.x()-ownGoalPos.x()) + 
+			  (agentPos.y()-ownGoalPos.y())*(agentPos.y()-ownGoalPos.y()));
+
+        // determine closest player
+	if (distArr[unum][idx] < closestPlayerDist[idx]) { 
+		closestPlayerDist[idx] = distArr[unum][idx]; closestPlayer[idx] = unum; 
+	}
+
+        // save player inside area state in previous cycle
+	prevPlayerInsideOwnArea[unum][idx] = playerInsideOwnArea[unum][idx]; 
+
+        // determine number of players inside area and set inside area state of player
+        if (idx == TI_LEFT && mLeftPenaltyArea.Contains(Vector2f(agentPos.x(), agentPos.y())) || 
+            idx == TI_RIGHT && mRightPenaltyArea.Contains(Vector2f(agentPos.x(), agentPos.y()))) { 
+		numPlInsideOwnArea[idx]++;
+		playerInsideOwnArea[unum][idx] = 1; 
+
+                //goalie is not repositioned when inside own area...
+		if (unum == 1) { 
+			distGArr[unum][idx] = 0.0; 
+		} 
+	}
+        else playerInsideOwnArea[unum][idx] = 0;
+
+        // Process agent state: standing, sitted, laying down, ...
+  	processAgentState(agentPos, unum, idx);
+   }
+ 
+   // compute rank of distance to ball
+   SimpleOrder(distArr, ordArr, idx);
+   // compute rank of distance to own goal
+   SimpleOrder(distGArr, ordGArr, idx);
+}
+
+// Analyse Faults and Creates Fault Time Array
+void SoccerRuleAspect::AnalyseFaults(TTeamIndex idx)
+{
+    TTeamIndex idx2; if (idx == TI_LEFT) idx2 = TI_RIGHT; else idx2 = TI_LEFT;   //Other team
+    for(int unum=1; unum<=11; unum++) {
+
+         //I am the third closest player but i am too near the ball (and not the goalie)	
+         if ( unum!=1 && closestPlayerDist[idx2] < mMinOppDistance && 
+	     (distArr[unum][idx] <= mMin3PlDistance+0.01 && ordArr[unum][idx] == 3)) 
+         {
+		playerFaultTime[unum][idx]++;  //increase player fault time
+                //cout << "Min3Dist " << mMin3PlDistance << " activated - player " << unum << " to be repositioned \n";
+         } 
+         else 
+         //I am the second closest player but i am too near the ball (and not the goalie)
+         if( unum!=1 && closestPlayerDist[idx2] < mMinOppDistance && 
+	     distArr[unum][idx] <= mMin2PlDistance+0.01 && ordArr[unum][idx] == 2 )  
+         { 
+		playerFaultTime[unum][idx]++;  //increase player fault time
+                //cout << "Min2Dist " << mMin2PlDistance << " activated - player " << unum << " to be repositioned \n";
+         }
+         else 
+	 // too many players inside my own penalty area and Im am the last one to enter or 
+	 // the last one to enter was the goalie and I am the one further away from own goal
+         if( (numPlInsideOwnArea[idx] > mMaxPlayersInsideOwnArea && unum !=1 && playerInsideOwnArea[unum][idx] == 1 &&
+         	  (prevPlayerInsideOwnArea[unum][idx] == 0 ||  
+         	    prevPlayerInsideOwnArea[1][idx] == 0 && 
+		    playerInsideOwnArea[1][idx] == 1 && 
+		    mMaxPlayersInsideOwnArea + 1 == ordGArr[unum][idx]))) 
+         {
+		playerFaultTime[unum][idx]++;  //increase player fault time
+                //cout << "MaxPlInPenalty " << mMaxPlayersInsideOwnArea << " activated - player " 
+                //     << unum << " to be repositioned " << " ord " << ordGArr[unum][idx] << "\n";
+         }
+         else 
+ 	 //I am a field player and on the ground for too much time
+         if ( unum!=1 && playerGround[unum][idx] > mGroundMaxTime/0.02   ) 
+         {
+		playerFaultTime[unum][idx]++;  //increase player fault time
+                //cout << "GroundMaxTime " << mGroundMaxTime << " activated - player " 
+                //     << unum << " to be repositioned " << "\n";
+         }
+         else 
+         // I am a field player and I am not standing for too much time
+         if( unum!=1 && playerNotStanding[unum][idx] > mNotStandingMaxTime/0.02 )
+         {
+		playerFaultTime[unum][idx]++;  //increase player fault time
+                //cout << "StandMaxTime " << mNotStandingMaxTime << " activated - player " 
+                //     << unum << " to be repositioned " << "\n";
+         }
+        
+         else 
+         //I am the goalie and I am on the ground for too much time
+         if ( unum==1 &&   
+	    	playerGround[unum][idx] > mGoalieGroundMaxTime/0.02  )
+         {
+		playerFaultTime[unum][idx]++;  //increase player fault time
+                //cout << "GoalieGroundMaxTime " << mGoalieGroundMaxTime << " activated - player " 
+                //     << unum << " to be repositioned " << "\n";
+         }
+        else 
+        //I am the goalie and I and not standing for too much time
+        if ( unum == 1 && playerNotStanding[unum][idx] > mGoalieNotStandingMaxTime/0.02)  
+	{
+		playerFaultTime[unum][idx]++;  //increase player fault time
+                //cout << "GoalieStandMaxTime " << mGoalieNotStandingMaxTime << " activated - player " 
+                //     << unum << " to be repositioned " << "\n";
+	}
+	else {
+		playerFaultTime[unum][idx]=0;  //reset player fault time
+	}
+
+    } 
+}
+
+
+salt::Vector3f SoccerRuleAspect::RepositionOutsidePos(salt::Vector3f posIni, int unum, TTeamIndex idx) 
+{
+   salt::Vector3f pos;
+   float fac=1.0;
+   if (unum > 6) unum = 7 -unum;		      //because of teams that use numbers 7-11
+   if (posIni.y()<1.5) fac = 1.0; else fac = -1.0;    //for visualization purposes
+   if (idx==TI_LEFT) pos = Vector3f(-(7-unum)*0.6, 6.5*fac, 1.0); 
+   else pos = Vector3f((7-unum)*0.6, 6.5*fac, 1.0);
+   //cout << "*********Player Repos Num: " << unum << "  Team: " << idx << "  Pos: " << pos << endl; 
+   return pos;
+}
+
+
+// Clear Players that are violating the rules
+void
+SoccerRuleAspect::ClearPlayersAutomatic(TTeamIndex idx)
+{
+    if (idx == TI_NONE || mBallState.get() == 0) return;
+
+    std::list<boost::shared_ptr<AgentState> > agent_states;
+    if (! SoccerBase::GetAgentStates(*mBallState.get(), agent_states, idx))  return;
+
+    salt::Vector3f ballPos = mBallBody->GetPosition();
+
+    boost::shared_ptr<oxygen::Transform> agent_aspect;
+    std::list<boost::shared_ptr<AgentState> >::const_iterator i;
+
+    for (i = agent_states.begin(); i != agent_states.end(); ++i) {
+        SoccerBase::GetTransformParent(**i, agent_aspect);
+        Vector3f agentPos = agent_aspect->GetWorldTransform().Pos();
+        int unum = (*i)->GetUniformNumber(); 
+	if (playerFaultTime[unum][idx] > mMaxFaultTime/0.02) {   
+	    // I am not a very good soccer player... I am violating the rules...
+            salt::Vector3f new_pos = RepositionOutsidePos(ballPos, unum, idx); 
+	    //Calculate my Reposition pos outside of the field
+            SoccerBase::MoveAgent(agent_aspect, new_pos);     
+	    //Oh my God!! I am flying!! I am going outside of the field
+	    ResetFaultCounterPlayer(unum, idx);
+   	    //cout << "*********Player Repos Num: " << unum << "  Team: " << team << "  Pos: " << new_pos << endl; 
+        }
+    }
 }
 
 void
@@ -855,6 +1129,9 @@ SoccerRuleAspect::Update(float deltaTime)
             << playMode << "\n";
         break;
     }
+  
+    // Simple Referee
+    AutomaticSimpleReferee(playMode);
 }
 
 void
@@ -912,7 +1189,20 @@ SoccerRuleAspect::UpdateCachedInternal()
     float penaltyLength, penaltyWidth;
     SoccerBase::GetSoccerVar(*this,"PenaltyLength",penaltyLength);
     SoccerBase::GetSoccerVar(*this,"PenaltyWidth",penaltyWidth);
+  
+    // auto ref parameters
+    SoccerBase::GetSoccerVar(*this,"NotStandingMaxTime",mNotStandingMaxTime); 
+    SoccerBase::GetSoccerVar(*this,"GoalieNotStandingMaxTime",mGoalieNotStandingMaxTime);
+    SoccerBase::GetSoccerVar(*this,"GroundMaxTime",mGroundMaxTime);
+    SoccerBase::GetSoccerVar(*this,"GoalieGroundMaxTime",mGoalieGroundMaxTime);
+    SoccerBase::GetSoccerVar(*this,"MaxPlayersInsideOwnArea",mMaxPlayersInsideOwnArea);
+    SoccerBase::GetSoccerVar(*this,"MinOppDistance",mMinOppDistance);
+    SoccerBase::GetSoccerVar(*this,"Min2PlDistance",mMin2PlDistance);
+    SoccerBase::GetSoccerVar(*this,"Min3PlDistance",mMin3PlDistance);
+    //SoccerBase::GetSoccerVar(*this,"MaxFaultTime",mMaxFaultTime);
 
+
+    // cout << "MaxInside " << mMaxPlayersInsideOwnArea << endl << endl;
     // set up bounding boxes for halfs and goal areas
 
     // the right and the left half are intentionally oversized towards the sides and
